--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.8.2",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -56,6 +57,7 @@
   "repository": "git@gitlab.com:arnab8/nuffsaid-frontend-coding-challenge.git",
   "devDependencies": {
     "@types/faker": "^5.5.8",
-    "@types/lodash": "^4.14.172"
+    "@types/lodash": "^4.14.172",
+    "@types/styled-components": "^5.1.14"
   }
 }
