--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,7 +18,9 @@
     "lodash": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "rxjs": "^7.3.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
@@ -58,6 +61,8 @@
   "devDependencies": {
     "@types/faker": "^5.5.8",
     "@types/lodash": "^4.14.172",
-    "@types/styled-components": "^5.1.14"
+    "@types/react-virtualized": "^9.21.13",
+    "@types/styled-components": "^5.1.14",
+    "clsx": "^1.1.1"
   }
 }
